# ocr-pdf-to-txt

./: README  main.py  pyproject.toml  test.txt
