[tool.poetry]
name = "pdf-ocr"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_ocr"}]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
